# imseg-generator

./: CMakeLists.txt  README.md  main.cpp  points_1.txt  points_2.txt  points_3.txt  points_4.txt  points_5.txt  points_6.txt
